--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
 [folders]
-sources = /home/stowasserh/work/rsynctest/source
-target = /home/stowasserh/work/rsynctest/target
+sources = /root;/etc;/home;/boot
+target = /media/nas/backup
 ; if you mount a storage the script can check if it is realy mounted before running
-check_mountpoint =
+check_mountpoint = /media/nas
 
 [ssh]
 ; the alternative to mount a storage ist to stream over ssh. please take care of the users permissions and use a separate user.
@@ -10,8 +10,8 @@ user = sshuser
 server = servberry
 port = 22
 ; none = you dont use ssh and copy to local/mount
-; push = move the files to server via ssh
-; pull = move the files from a host to local via ssh
+; push = move the files to server via rsync + ssh
+; pull = move the files from a host to local via rsync + ssh
 ; mode = {none|push|pull}
 mode = none
 
@@ -19,13 +19,29 @@ mode = none
 conf = --delete
 
 [logging]
-logfile = /var/log/pibackup.log
+logfile = /media/nas/log/pibackup.log
 ; levels={debug|info|warning|error|critical}
 level = debug
 format = %(asctime)s %(levelname)s:%(message)s
 
 [rotation]
-; frequency={all|once};{monthly|yearly|none|weekly};{rsync|sd}
-quick = all;weekly;rsync
-full = once;weekly;sd
+; frequency={all|once};
+;            monthly|yearly|none|weekly};
+;            rsync|ssh}
+quick = all;weekly;rsync;folder
+;ssh = all;weekly;ssh;folder
+mysqldb = all;weekly;ssh;mysql
+full = once;weekly;ssh;sd
+; example for the configutation of the mysql-plugin
+
+[mysqldb]
+mysql_dump_options = --compact --disable-keys --dump-date --comments --lock-tables -u root
+database = --all-databases
+
+[systemd]
+; pibackup can stop daemons!
+; stop daemons={false|true}
+stopdaemons = true
+; this daemons! should not be stoped
+whitelist = 
 
